# ebm-training

./: .gitignore  README.md  dw4_job.sh  gmm_job.sh  job.sh  liouville_blr_job.sh  liouville_job.sh  lj13_job.sh  main.py  mw32_job.sh  pyproject.toml  run.sh  shortcut_liouville.sh  test.py  train_ebm.py  train_ebm_sm.py  train_liouville.py  train_liouville_blr.py  train_modified_liouville.py  train_shortcut_liouville.py  velocity_field_0.pt
DEM/: .gitignore  run.sh
data/: dw4_samples_128_steps.npz  dw4_samples_16_steps.npz  dw4_samples_1_steps.npz  dw4_samples_32_steps.npz  dw4_samples_64_steps.npz  dw4_samples_8_steps.npz  gmm_samples.npz  gmm_samples_16_steps.npz  gmm_samples_1_steps.npz  gmm_samples_32_steps.npz  gmm_samples_64_steps.npz  gmm_samples_8_steps.npz  mw32_samples.npz  mw32_samples_128_steps.npz  mw32_samples_16_steps.npz  mw32_samples_1_steps.npz  mw32_samples_32_steps.npz  mw32_samples_64_steps.npz  mw32_samples_8_steps.npz
dem/: train.py
distributions/: __init__.py  annealed_distribution.py  base.py  double_well.py  gmm.py  lennard_jones.py  many_well.py  multi_double_well.py  multivariate_gaussian.py  soft_core_lennard_jones.py  time_dependent_lennard_jones.py  time_dependent_lennard_jones_butler.py  translation_invariant_gaussian.py  wrapped_multivariate_gaussian.py
experiments/: eval_dw4.py  eval_gmm.py  eval_mw32.py  gen_dw4.py  gen_gmm.py  gen_mw32.py  gmm_w2.py  sample_buffer.py  sample_dw4_smc.py  sample_dw4_vsmc.py  sample_gmm.py  sample_gmm_smc.py  sample_lj13.py  sample_lj13_smc.py  sample_lj13_tsmc.py  sample_lj13c.py  sample_mw32.py  (+14 more)
(+79 files in other folders)
