[project]
name = "ebm-training"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
    "chex>=0.1.81",
    "distrax>=0.1.5",
    "equinox>=0.11.7",
    "ipykernel>=6.29.5",
    "jaxlib==0.4.34",
    "jax==0.4.34",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "wandb>=0.18.3",
    "optax",
    "scikit-learn>=1.5.2",
    "blackjax>=1.2.4",
    "jax-md @ git+https://github.com/google/jax-md.git",
]

[tool.uv.sources]
optax = { git = "https://github.com/google-deepmind/optax.git", rev = "b8c2e13" }
